# versions

./: .gitignore  .mutmutrc  README.md  configure.sh  experiment.py  flake.nix  git_shit.py  install.sh  pyproject.toml  pytest.ini  requirements.txt  test_results_summary.md  uninstall.sh  watcher.py  watcher_async.py  watcher_onto.py  watcher_sparql.py
tests/unit/: test_watcher.py  test_watcher_onto.py
