[project]
name = "versions"
version = "0.1.0"
description = "CitC-like file versioning system for decentralized edge use"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "Owlready2==0.38",
    "pywatchman==1.4.1",
    "flask==2.2.2",
    "werkzeug==2.2.2",
    "python-daemon>=2.3.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.20",
    "pytest-mock>=3.10",
    "hypothesis>=6.0",
    "mutmut>=2.4",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

[project.scripts]
versions = "versions_service:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true